tests/ui/recursion/recursion_limit/invalid-attribute-105700.stderr
error: recursion limit reached while expanding `#[invalid_attribute]`
  --> $DIR/invalid-attribute-105700.rs:6:1
   |
LL | #![invalid_attribute]
   | ^^^^^^^^^^^^^^^^^^^^^
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "8"]` attribute to your crate (`invalid_attribute_105700`)

error: aborting due to 1 previous error

